edited My Posts

--- a/src/posts/my-first-post/index.mdx
+++ b/src/posts/my-first-post/index.mdx
@@ -2,7 +2,7 @@
 title: My First Post!
 slug: my-first-post
 date: 2019-12-20
-excerpt: This is my first post, happy day happy life.. or something like that
+excerpt: Habitant pharetra, urna ipsum interdum risus nunc. Venenatis orci, sagittis, elementum urna.
 ---
 
 # Heading 1
