--- a/src/posts/my-third-post/index.mdx
+++ b/src/posts/my-third-post/index.mdx
@@ -2,7 +2,7 @@
 title: My Third Post!
 slug: my-third-post
 date: 2020-01-01
-excerpt: This is my third post, enjoy life!
+excerpt: Enim nunc amet, eu, vitae nunc. Et in elementum aliquet nunc mauris, nulla. Convallis viverra neque quam mi sit.
 ---
 
 # Heading 1
