--- a/src/posts/my-first-post/index.mdx
+++ b/src/posts/my-first-post/index.mdx
@@ -2,6 +2,7 @@
 title: My First Post!
 slug: my-first-post
 date: 2019-12-20
+featureImage: nature.jpg
 excerpt: Habitant pharetra, urna ipsum interdum risus nunc. Venenatis orci, sagittis, elementum urna.
 ---
 
