--- a/src/posts/my-fourth-post/index.mdx
+++ b/src/posts/my-fourth-post/index.mdx
@@ -2,6 +2,7 @@
 title: My Fourth Post!
 slug: my-fourth-post
 date: 2020-04-03
+featureImage: island.jpg
 excerpt: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit nisl, leo et. Vitae hendrerit vivamus cum ullamcorper hendrerit et arcu, elit ornare.
 ---
 
