--- a/src/posts/my-second-post/index.mdx
+++ b/src/posts/my-second-post/index.mdx
@@ -2,6 +2,7 @@
 title: My Second Post!
 slug: my-second-post
 date: 2019-12-25
+featureImage: mountains.jpg
 excerpt: Integer morbi purus in morbi nisl lobortis congue malesuada. Id turpis posuere nam habitasse at mus viverra.
 ---
 
