Fixed images in single post

--- a/src/posts/my-third-post/index.mdx
+++ b/src/posts/my-third-post/index.mdx
@@ -36,7 +36,7 @@ Lorem ipsum dolor sit amet, ~~consectetur adipiscing elit~~. Ut tortor tincidunt
 - Showcase and embed your work with
 - Showcase and embed your work with
 
-![Nature Photo](nature.jpg)
+![River Photo](river.jpg)
 
 ```html
 <div>Hello World</div>
